--- a/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
+++ b/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
@@ -366,7 +366,7 @@
                                             <fragment content="Label">
                                                 <attributes>
                                                     <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                                    <font key="NSFont" metaFont="label" size="11"/>
+                                                    <font key="NSFont" metaFont="message" size="11"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -624,13 +624,56 @@
                                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells>
-                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ucb-Kc-dc7">
-                                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProjectStagesCell" id="ucb-Kc-dc7" customClass="ProjectStagesCell" customModule="SmartKitty" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="82" height="128"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rDk-tv-iiy">
-                                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="82" height="128"/>
                                                             <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0x8-oV-1mj">
+                                                                    <rect key="frame" x="20" y="20" width="42" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="IEk-Bt-c8W">
+                                                                    <rect key="frame" x="20" y="50.5" width="136" height="20.5"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHB-vs-iGx">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="68" height="20.5"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SZU-ak-yNK">
+                                                                            <rect key="frame" x="68" y="0.0" width="68" height="20.5"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                </stackView>
+                                                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Mjn-VN-9Rq">
+                                                                    <rect key="frame" x="20" y="91" width="42" height="2"/>
+                                                                </progressView>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="Mjn-VN-9Rq" firstAttribute="top" secondItem="IEk-Bt-c8W" secondAttribute="bottom" constant="20" id="4dX-4N-lFg"/>
+                                                                <constraint firstItem="IEk-Bt-c8W" firstAttribute="top" secondItem="0x8-oV-1mj" secondAttribute="bottom" constant="10" id="LVZ-QE-9uR"/>
+                                                                <constraint firstAttribute="trailing" secondItem="0x8-oV-1mj" secondAttribute="trailing" constant="20" id="O4P-nz-gIv"/>
+                                                                <constraint firstItem="Mjn-VN-9Rq" firstAttribute="leading" secondItem="rDk-tv-iiy" secondAttribute="leading" constant="20" id="c8h-4R-8pQ"/>
+                                                                <constraint firstItem="IEk-Bt-c8W" firstAttribute="leading" secondItem="rDk-tv-iiy" secondAttribute="leading" constant="20" id="er3-t9-Ab4"/>
+                                                                <constraint firstAttribute="trailing" secondItem="Mjn-VN-9Rq" secondAttribute="trailing" constant="20" id="pPF-D8-JQY"/>
+                                                                <constraint firstItem="0x8-oV-1mj" firstAttribute="top" secondItem="rDk-tv-iiy" secondAttribute="top" constant="20" id="vaG-bk-UWw"/>
+                                                                <constraint firstItem="0x8-oV-1mj" firstAttribute="leading" secondItem="rDk-tv-iiy" secondAttribute="leading" constant="20" id="xmG-PG-KIz"/>
+                                                            </constraints>
                                                         </collectionViewCellContentView>
+                                                        <connections>
+                                                            <outlet property="progressLabel" destination="SZU-ak-yNK" id="y7b-fs-B0W"/>
+                                                            <outlet property="stageProgressView" destination="Mjn-VN-9Rq" id="5hh-Sg-OkK"/>
+                                                            <outlet property="stageTitle" destination="0x8-oV-1mj" id="F2e-iv-zks"/>
+                                                        </connections>
                                                     </collectionViewCell>
                                                 </cells>
                                             </collectionView>
@@ -720,6 +763,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6rd-0J-vMa"/>
                     </view>
+                    <connections>
+                        <outlet property="projectDeadline" destination="pun-8x-mtv" id="ESv-0n-BkF"/>
+                        <outlet property="projectDocumentsCollectionView" destination="pow-Ca-Zru" id="97j-cQ-XeB"/>
+                        <outlet property="projectNotes" destination="uFD-Oa-vrY" id="atG-xK-shN"/>
+                        <outlet property="projectProgress" destination="HVe-0c-Swv" id="25K-IE-U9n"/>
+                        <outlet property="projectStagesCollectionView" destination="VuV-fF-UVR" id="op3-Vg-9jg"/>
+                        <outlet property="projectStatus" destination="X22-wT-6jY" id="yqg-Ug-3IZ"/>
+                        <outlet property="projectTitle" destination="vMD-o2-pxx" id="pP6-qE-4aD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dy0-wR-iQJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
